splashBlocker updated to ensure growing with text overflow

--- a/app/assets/styles/c6publisher.css
+++ b/app/assets/styles/c6publisher.css
@@ -1548,12 +1548,13 @@
             margin:0 0 0.375em;
         }
         .embedPreview {
-            width:100%; height:300px;
+            width:100%;
             position:relative;
         }
             .mr-splashBlocker {
-                position:absolute; z-index:5; top:0; left:0;
-                width:100%; height:100%;
+                position:absolute; z-index:5; 
+                top:0; left:0; bottom:0; right:0;
+                min-height:300px;
             }
         .embedPreview__group .embed__selector {
             width:100%; margin:0 0 1em 0;
